deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: holamundoYO
spec:
  replicas: 2
  selector:
    matchLabels:
      app: holamundoYO
  template:
    metadata:
      labels:
        app: holamundoYO
    spec:
      containers:
      - name: holamundoYO
        image: holamundoYO
        ports:
        - containerPort: 80
