balanceador.yaml
apiVersion: v1
kind: Service
metadata:
  name: holamundoYO
spec:
  selector:
    app: holamundoYO
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
